# e2br3

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml  presave-reference-matrices.yml
crates/libs/validator/: Cargo.toml
crates/libs/validator/examples/: export_validation_rules_json.rs
crates/libs/validator/src/: allowed_value.rs  c_reporter_policy.rs  c_safety_report_policy.rs  catalog.rs  catalog_dictionary_constraints.rs  context.rs  d_patient_policy.rs  e_reaction_policy.rs  f_test_result_policy.rs  fda_context.rs  g_drug_policy.rs  h_narrative_policy.rs  lib.rs  mfds_context.rs  portable_constraints.rs
crates/libs/validator/src/case/: mod.rs
crates/libs/validator/src/case/sections/: c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  mod.rs  n.rs  rule_table.rs
crates/libs/validator/src/portable_bindings/: c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  mod.rs  n.rs
crates/libs/validator/src/xml/: fda_profile.rs  ich_profile.rs  mod.rs  shared_specs.rs
crates/libs/validator/src/xml/sections/: c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  mod.rs  n.rs
crates/libs/validator/tests/: allowed_value_representation.rs  xml.rs
crates/libs/validator/tests/xml/: xml_schema_business_ci.rs  xml_validation.rs
crates/tools/terminology-loader/: Cargo.toml
crates/tools/terminology-loader/src/: main.rs
db/: README.md
db/admin/: 00-recreate-db.sql
db/bootstrap/: 01-safetydb-schema.sql  03-safety-report-identification.sql  04-patient-information.sql  05-reactions.sql  06-test-results.sql  07-drug-information.sql  08-narrative-information.sql  09-terminology.sql  10-triggers.sql  11-fda-device-codes.sql  test-terminology-rls-policy.sh
db/migrations/: 20260428_add_deleted_case_status.sql  20260523_add_case_validation_reports.sql  20260523_rename_validation_profile_to_authority.sql  20260528_remove_presave_authority.sql  20260528_restrict_sender_gateway_authorities.sql  20260714_presave_lifecycle_guards.sql  20260714_product_receiver_presave_link.sql  20260714_study_presave_fda_fields.sql  20260715_rbac_policy_version.sql  20260718_case_status_before_lock.sql  20260718_remove_orphan_local_fields.sql  20260718_remove_reaction_ema_ime_list.sql  20260718_reporter_element_null_flavors.sql  20260719_schema_alignment.sql  20260720_authorization_kernel.sql  20260720_authorization_revisions.sql  20260721_presave_product_study_canonical_names.sql  20260722_authorization_isolation_audit.sql  20260722_authorization_ui_binding_catalog.sql  20260724_authorization_direct_grant_actions.sql  (+3 more)
docs/: 03.csv  API_ENDPOINTS.md  API_PAYLOADS_FRONTEND.md  FDA_E2B_IMPLEMENTATION_CHECKLIST.md  INFO_BACKEND_C3_C4_E_HANDOFF.md  PRODUCTION-PLAN.md  TERMINOLOGY_LOADER.md  UI_XML_EXHAUSTIVE_STATUS_2026-02-25.md  UI_XML_ROUNDTRIP_ISSUES_2026-02-24.md  WORKFLOW_REBUILD_PLAN.md  feedback.csv  openapi-swagger.html  openapi.json
registry/: FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  catalog-implementation-inventory.md  dictionary-rules.schema.json  dictionary.schema.json  index.json  schema.json  vocabulary.schema.json
scripts/: check_legacy_authorization_paths.sh  generate_frontend_authorization.sh  generate_frontend_endpoint_permissions.sh  generate_frontend_permissions.sh  ui_sanity_terminology_admin.sh  ui_sanity_workflow_common_errors.sh  ui_static_contracts.sh  validate_presave_reference_matrices.py
web-folder/: index.html
(+906 files in other folders)
