[workspace.lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils",      # e.g., base64, time.
    "crates/libs/lib-rest-core",  # e.g., core rest utils (REST API params/results)
    "crates/libs/lib-auth",       # e.g., for pwd, token.
    "crates/libs/lib-core",       # e.g., model, ctx, config.
    "crates/libs/lib-web",        # e.g., logging, common middleware etc
    "crates/libs/validator",      # validation engine

    # -- Application Services
    "crates/services/web-server",

    # -- Tools
    "crates/tools/gen-key",
    "crates/tools/terminology-loader",
]

# NOTE: Only the crates that are utilized in two or more sub-crates and benefit from global management
#       are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# -- Serde
serde_with = {version = "3", features = ["time_0_3"] }
# -- Data
# Note: we lock modql version during rcs
modql = { version = "0.4.1", features = ["with-sea-query"]}
sqlx = { version = "0.8", features = [ "macros", "runtime-tokio-rustls", "postgres", "uuid" ] }
sea-query = { version = "0.32", features = ["with-uuid", "with-time", "with-rust_decimal"] }
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-uuid", "with-time", "with-rust_decimal"] }
# -- Web
axum = {version = "0.8", features = ["macros"]}
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"
# -- Others
time = {version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"]}
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
