[package]
name = "terminology-loader"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
lib-core = { path = "../../libs/lib-core" }
tokio = { version = "1", features = ["full"] }
sqlx = { workspace = true }
clap = { version = "4", features = ["derive"] }
zip = "2"
walkdir = "2"
csv = "1"
sha2 = "0.10"
hex = "0.4"
